--- a/StackOverflowUI/appsettings.Development.json
+++ b/StackOverflowUI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Settings": {
+    "StackOverflowApiKey": "U4DMV*8nvpm3EOpvf69Rxw(("
   }
 }
