--- a/StackOverflowUI/appsettings.json
+++ b/StackOverflowUI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "StackOverflowApiKey":"U4DMV*8nvpm3EOpvf69Rxw(("
+  }
 }
